New project1-good notebook, log. regression tests

--- a/projects/project1/scripts/project1-Julie.ipynb
+++ b/projects/project1/scripts/project1-Julie.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -108,15 +108,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/JulieDjeffal/Documents/EPFL/pattern/2016/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:38: RuntimeWarning: divide by zero encountered in log\n",
+      "/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:38: RuntimeWarning: divide by zero encountered in log\n",
       "  new = np.array([np.log(x)])\n",
-      "/Users/JulieDjeffal/Documents/EPFL/pattern/2016/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:38: RuntimeWarning: invalid value encountered in log\n",
+      "/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:38: RuntimeWarning: invalid value encountered in log\n",
       "  new = np.array([np.log(x)])\n",
-      "/Users/JulieDjeffal/anaconda/lib/python3.5/site-packages/numpy/lib/function_base.py:964: RuntimeWarning: invalid value encountered in multiply\n",
+      "/home/huguenin/anaconda3/lib/python3.5/site-packages/numpy/lib/function_base.py:964: RuntimeWarning: invalid value encountered in multiply\n",
       "  scl = np.multiply(avg, 0) + scl\n",
-      "/Users/JulieDjeffal/anaconda/lib/python3.5/site-packages/numpy/lib/function_base.py:2490: RuntimeWarning: invalid value encountered in subtract\n",
+      "/home/huguenin/anaconda3/lib/python3.5/site-packages/numpy/lib/function_base.py:2490: RuntimeWarning: invalid value encountered in subtract\n",
       "  X -= avg[:, None]\n",
-      "/Users/JulieDjeffal/Documents/EPFL/pattern/2016/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:25: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:25: RuntimeWarning: invalid value encountered in sqrt\n",
       "  new = np.array([np.sqrt(x)])\n"
      ]
     },
@@ -124,11 +124,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.00405106  0.18533388 -0.6799645  ...,  0.18990274 -0.8599575\n",
-      " -0.57424179]\n",
+      "[-1.24826179  0.12688334 -0.64313461 ...,  0.20292076 -0.90996997\n",
+      " -0.53655409]\n",
       "[-1.  1. -1. ...,  1. -1. -1.]\n",
       "[-1. -1. -1. ...,  1. -1. -1.]\n",
-      "0.8144\n",
+      "0.8156\n",
       "7\n"
      ]
     }
@@ -180,6 +180,75 @@
     "print(best_accuracy)\n",
     "print(best_k)\n",
     "#print(weights)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.19812327  0.16573359 -0.66717379 ...,  0.20783025 -0.8570355\n",
+      " -0.56116316]\n",
+      "[-1.  1. -1. ...,  1. -1. -1.]\n",
+      "[-1. -1. -1. ...,  1. -1. -1.]\n",
+      "[-1.19038427  0.16534106 -0.66500151 ...,  0.20746357 -0.85528914\n",
+      " -0.56296502]\n",
+      "[-1.  1. -1. ...,  1. -1. -1.]\n",
+      "[-1. -1. -1. ...,  1. -1. -1.]\n",
+      "[-1.19584552  0.16143929 -0.66807235 ...,  0.2027583  -0.85821753\n",
+      " -0.56591584]\n",
+      "[-1.  1. -1. ...,  1. -1. -1.]\n",
+      "[-1. -1. -1. ...,  1. -1. -1.]\n",
+      "[-1.20951576  0.16156455 -0.66812928 ...,  0.20349953 -0.86086298\n",
+      " -0.56321292]\n",
+      "[-1.  1. -1. ...,  1. -1. -1.]\n",
+      "[-1. -1. -1. ...,  1. -1. -1.]\n",
+      "[-1.21011634  0.15666028 -0.66054158 ...,  0.2101822  -0.86195646\n",
+      " -0.56406229]\n",
+      "[-1.  1. -1. ...,  1. -1. -1.]\n",
+      "[-1. -1. -1. ...,  1. -1. -1.]\n",
+      "0.81476\n",
+      "7\n",
+      "1e-26\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split data in k fold\n",
+    "k_indices = build_k_indices(y, k_fold, seed)\n",
+    "\n",
+    "# define lists to store the loss of training data and test data\n",
+    "rmse_tr = []\n",
+    "rmse_te = []\n",
+    "#k_list = list(range(k_fold))\n",
+    "k=7\n",
+    "lambdas = [ 10**(-i) for i in range(25, 30) ]\n",
+    "tot_loss_tr = 0\n",
+    "tot_loss_te = 0\n",
+    "best_accuracy = 0\n",
+    "best_k = 0\n",
+    "best_l = 0\n",
+    "weights = np.array([])\n",
+    "for l in lambdas:\n",
+    "    loss_tr, loss_te, accuracy_least, w = cross_validation(y, tX, k_indices, k, ridge_regression, lamb=l)\n",
+    "    tot_loss_tr += loss_tr\n",
+    "    tot_loss_te += loss_te\n",
+    "    if accuracy_least > best_accuracy:\n",
+    "        best_accuracy = accuracy_least\n",
+    "        best_k = k\n",
+    "        weights = w\n",
+    "        best_l = l\n",
+    "    rmse_tr.append(np.sqrt(2/k_fold * tot_loss_tr))\n",
+    "    rmse_te.append(np.sqrt(2/k_fold * tot_loss_te))\n",
+    "print(best_accuracy)\n",
+    "print(best_k)\n",
+    "print(best_l)"
    ]
   },
   {
